# txt2sduml

./: .gitignore  README.ja.md  README.md  pyproject.toml
src/: sdorg.py  start.py
src/lib/: logger.py  verbosity.py
